--- a/src/TechChallenge.Authentication/appsettings.json
+++ b/src/TechChallenge.Authentication/appsettings.json
@@ -1,8 +1,8 @@
 {
   "region": "us-east-1",
-  "userPoolId": null,
-  "userPoolClientId": null,
+  "userPoolId": "us-east-1_rJ7eerC4z",
+  "userPoolClientId": "224saecbveu6rcmnmkb26cqo18",
   "userDefault": "00000000000",
   "emailDefault": "techuser@email.com",
-  "passwordDefault": "techpass"
+  "passwordDefault": "TechChallengePass@123"
 }
