Adding pipeline and tf files

--- a/src/TechChallenge.Authentication/appsettings.json
+++ b/src/TechChallenge.Authentication/appsettings.json
@@ -1,7 +1,7 @@
 {
   "region": "us-east-1",
-  "userPoolId": "us-east-1_rJ7eerC4z",
-  "userPoolClientId": "224saecbveu6rcmnmkb26cqo18",
+  "userPoolId": "us-east-1_d37uFv9Go",
+  "userPoolClientId": "78tqq57kfdt97luej7n2f8211d",
   "userDefault": "00000000000",
   "emailDefault": "techuser@email.com",
   "passwordDefault": "TechChallengePass@123"
