--- a/src/TechChallenge.Authentication/TechChallenge.Authentication.csproj
+++ b/src/TechChallenge.Authentication/TechChallenge.Authentication.csproj
@@ -32,5 +32,11 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="aws-lambda-tools-defaults.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="serverless.template">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
