--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Deploy auth Infrastructure
-'on':
-  push:
+on:
+ pull_request:
+    types:
+      - closed
     branches:
-      - master
-  pull_request: null
-  workflow_dispatch: null
+      - master 
 jobs:
   build:
     runs-on: ubuntu-latest
