--- a/src/TechChallenge.Authentication/appsettings.json
+++ b/src/TechChallenge.Authentication/appsettings.json
@@ -1,7 +1,7 @@
 {
   "region": "us-east-1",
-  "userPoolId": "us-east-1_d37uFv9Go",
-  "userPoolClientId": "78tqq57kfdt97luej7n2f8211d",
+  "userPoolId": "us-east-1_1mCqVFD2i",
+  "userPoolClientId": "2a6gob4jvorb5g20l86l8kr3e1",
   "userDefault": "00000000000",
   "emailDefault": "techuser@email.com",
   "passwordDefault": "TechChallengePass@123"
