--- a/src/TechChallenge.Authentication/appsettings.json
+++ b/src/TechChallenge.Authentication/appsettings.json
@@ -1,7 +1,7 @@
 {
   "region": "us-east-1",
-  "userPoolId": "us-east-1_1mCqVFD2i",
-  "userPoolClientId": "2a6gob4jvorb5g20l86l8kr3e1",
+  "userPoolId": "us-east-1_SRwmdNiR1",
+  "userPoolClientId": "29p6gao4qkan0gv84n2n3oqme2",
   "userDefault": "00000000000",
   "emailDefault": "techuser@email.com",
   "passwordDefault": "TechChallengePass@123"
